# IdeaProjects

learning/: README.md
learning/algorithms/: bfs.py  binary_search.py  graphs.py  kmp_algorithm.ipynb  sliding_window.py  union_find.py
learning/crypto/: public_key.md  symmetric_key.ipynb
learning/http/: http.md  server.py  server_sent_events.html  websockets.html
learning/ios/: augmented_reality.md  sensors.md
learning/linux/: Makefile  containers.md  linux.md
learning/networks/: networks.md  tcp_nagle.py  tcp_server.py
leetcode/: accounts_merge.go  android_unlock_patterns.go  car_fleet.go  check_if_word_can_be_placed_in_crossword.go  coin_change_ii.py  continious_subarray_with_absolute_diff_less_than_or_equal_to_limit.py  count_unreachable_pairs_of_nodes_in_an_undirected_graph.go  count_words_after_obtaining_a_letter.py  decode_ways.py  diagonal_traverse.py  differ_by_one_character.py  extra_characters_in_a_string.py  find_good_days_to_rob_a_bank.py  find_k_pairs_with_smallest_sums.py  find_longest_special_substring_that_occurs_thrice_i.go  find_the_maximum_number_of_elements_in_subset.go  flip_string_to_monotone_incresing.py  jump_game_ii.py  koko_eating_bananas.go  largest_rectangle_in_histogram.py  left_most_column_with_at_least_a_one.py  lonely_pixel_i.go  lonely_pixel_ii.go  longest_absolute_file_path.go  longest_common_prefix.py  longest_nice_subarray.go  maximal_square.go  maximum_employees_to_be_invited_to_a_meeting.py  maximum_good_subarray_sum.go  maximum_length_of_subarray_with_positive_product.py  maximum_number_of_events_that_can_be_attended.py  maximum_number_of_points_with_cost.py  maximum_split_of_positive_even_integers.py  maximum_swap.py  minimum_area_rectangle.go  minimum_area_rectangle_ii.go  minimum_number_of_swaps_to_make_binary_string_alternating.py  number_of_provinces.go  number_of_ways_to_reorder_array_to_get_same_bst.py  ones_and_zeroes.py  (+6 more)
networks/: networks.md  tcp_client.py  tcp_download.py
packaging/: poetry.md  pyproject.toml
packaging/src/packaging/: script.py
sog-fortran/: hello.f  max_points_with_cost.f
sog-go/: async_preemption.go  go.mod  main.go
sog-go-web/: go.mod  server.go
sog-go-web/database/: database.go
sog-go-web/model/: message.go
sog-kotlin-web/: build.gradle.kts  settings.gradle.kts
sog-python/: Dockerfile  Makefile  app.py  asgi.ipynb  bokeh_tutorial.ipynb  color_preferences.txt  contextvars.ipynb  docker-compose.yaml  envoy-demo.yaml  etcd.http  fastapi_app.py  fire_tutorial.py  graphviz.ipynb  hypothesis_tutorial.py  intellij_http_client.http  jax.ipynb  langchain.ipynb  langchain_with_langserve.py  misc.md  movies_preferences.txt  numpy.ipynb  ollama.md  openai.ipynb  packaging.md  pandas_tutorial.py  primes.py  requirements.txt  sat_solvers.ipynb  temporal_activities.py  temporal_app.py  temporal_client.py  temporal_data.py  tensorflow.ipynb  test_whats_new.py  toml_tutorial.py  toml_tutorial.toml  trio_tutorial.py  typer_tutorial.py  typing_tutorial.py  uci_benchmark.py  (+1 more)
sog-python/mypy/: mypy.md
sog-python/namespace_packages/: namespace_packages.md
sog-python/packaging/: packaging.md  pylock.toml  pyproject.toml  requirements.txt
sog-python/packaging/src/mypackage/: cli.py
sog-python/templates/: htmx_edit_message.html  htmx_message.html  htmx_root.html
sog-react/: package-lock.json  package.json
sog-react/src/: App.js
sog-svelte/: README.md  package-lock.json  package.json  tailwind.config.js  tailwind.md
sog-svelte/src/: app.html
sog-typescript/: hello.ts  package.json
thames/: .gitignore  README.md  mix.exs  mix.exs~
thames/assets/: tailwind.config.js
thames/config/: config.exs  dev.exs  dev.exs~  prod.exs  runtime.exs  test.exs  test.exs~
thames/lib/: thames.ex  thames_web.ex
thames/test/: test_helper.exs
tools/: alfred.md  awk.md  cli.md  gradle.md  iterm.md  zsh.md
tools/aws_lambda/: aws_lambda.md
tools/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  aspects.bzl  bazel.md  check_runfiles.py  depsets.bzl  dynamic_deps.txt  extensions.bzl  hello.tp  inc.bazel  print_data.py  requirements.in  requirements.txt  rules.bzl  rules_test.bzl  study_plan.md  study_plan_2025.md  test_sandbox.py
tools/bazel/proto/: BUILD.bazel  check_proto.py  foo.proto
tools/bazel/subpackage/: BUILD.bazel  check_runfiles.py  py_cat.py  test_subpackage.py
tools/bazel_aspect/: .bazelrc  BUILD  MODULE.bazel
tools/bazel_aspect/.aspect/bazelrc/: BUILD
tools/bazel_aspect/app/: __main__.py  test_add.py
tools/bazel_aspect/requirements/: all.txt  runtime.txt  tools.in
tools/bazel_aspect/tools/oci/: BUILD  py3_image.bzl
tools/bazel_python/: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  devlod.md  gazelle_python.yaml  pyproject.toml  requirements.in  requirements.txt
tools/bazel_python/.aspect/cli/: config.yaml
tools/bazel_python/app/: BUILD  BUILD.bazel  __main__.py  app.py  test_add.py  test_app.py
tools/bazel_python/requirements/: all.txt
tools/bazel_python/rules_pie/: BUILD.bazel  bootstrap.sh.tpl  defs.bzl  greeter.py  greeter_helper.py  hello.py  pyvenv.cfg.tpl  rules_pie.md
tools/bazel_python/tools/: BUILD
tools/bazel_python/tools/lint/: linters.bzl
tools/bazel_python/web/: BUILD.bazel  app.py  app_test.py  cmd.py
tools/caddy/: Caddyfile  Caddyfile_https  caddy.md  config.json
tools/cockroachdb/: cockroachdb.md
tools/coq/: add_0.v  coq.md
tools/distributed_systems/: consistency.md  two_phase_commit.md
tools/elixir/: elixir.md  tutorial.exs
tools/flink/: flink.md
tools/git/: git.md  pygit.py
tools/godot/: HUD.gd  godot.md  hud.tscn  icon.svg.import  main.gd  main.tscn  mob.tscn  player.gd  player.tscn  project.godot
tools/gradle-demo/: settings.gradle.kts
tools/haskell/: haskell.md  tutorial.hs
tools/idris/: idris.md  tutorial.idr
tools/intellij/: ai_assistant.md  database.md  features.md  new_features.md
tools/io_uring/: Dockerfile  io_uring.c  io_uring.md
tools/k6/: k6.md  script.js
tools/k8s/: Dockerfile  app.go  app_v2.go  k8s.md  sog-golang-deployment.yaml  v2.Dockerfile
tools/llvm/: hello.ll  hello.s  (+1 more)
(+122 files in other folders)
