bazel_dep(name = "aspect_rules_py", version = "1.5.2")

# TODO: deep-dive into gazelle
# TODO: do we need repo_name "bazel_gazelle"?
# TODO: do we need dev_dependency = True for gazelle?
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.4.1")
bazel_dep(name = "rules_uv", version = "0.71.0")

# cd third_party
# g clone https://github.com/bazel-contrib/rules_python.git
# cd rules_python
# g co 1.4.1
# rm -rf .git
local_path_override(
    module_name = "rules_python",
    path = "third_party/rules_python",
)

# cd third_party
# g clone https://github.com/aspect-build/rules_py.git
# cd rules_py
# g co v1.5.2
# rm -rf .git
local_path_override(
    module_name = "aspect_rules_py",
    path = "third_party/rules_py",
)

# TODO: deep-dive into bazel module extensions
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# TODO: deep-dive into `pip` extension (how does it materialize repositories etc)
# TODO: how do rules_python++internal_deps work? (they're located in $output_base/external)
pip.parse(
    # TODO: should hub_name match the argument in use_repo?
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)

# TODO: how to query this repo with `bazel query`? `bazel mod show_repo` doesn't work
# TODO: deep-dive into `bazel mod` cmd
use_repo(pip, "pypi")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# TODO: deep-dive into `python` extension
python.defaults(python_version = "3.13")

# TODO: deep-dive into bazel toolchains
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)
