load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# by default files are visible only in current package
# exports_files allows files to be visible in other packages
exports_files(["file_in_subpackage.txt"])

py_binary(
    name = "check_runfiles",
    srcs = [":check_runfiles.py"],
    data = [
        "//:bazel.md",
        "//subpackage:file_in_subpackage.txt",
    ],
)

py_library(
    name = "adder",
    srcs = ["adder.py"],
    imports = ["."],
)

py_test(
    name = "passing_test",
    srcs = ["test_subpackage.py"],
    main = "test_subpackage.py",
    # no-cache tag supposed to disable test caching
    # but it doesn't work as you expect (welcome to bazel!)
    # since action cache, where action results are stored, is ignoring this tag
    # you can work around this by passing --nouse_action_cache
    # but it's no clear why we would need no-cache tag in this case
    #    tags = ["no-cache"],
    # external tag forces test executing without any cache
    # this _really_ ignores all the caches including action cache
    tags = ["external"],
    deps = [
        ":adder",
    ],
)
