load(":defs.bzl", "pie_binary", "pie_library")

pie_binary(
    name = "hello",
    srcs = ["hello.py"],
    deps = [":greeter"],
)

pie_binary(
    name = "hello_3.11",
    srcs = ["hello.py"],
    python_version = "3.11",
    deps = [":greeter"],
)

pie_library(
    name = "greeter",
    srcs = ["greeter.py"],
)
