load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

# TODO: deep-dive into py_binary, py_library, and py_test in rules_py (bootstrap_template etc)
py_binary(
    name = "app",
    srcs = ["app.py"],
    # TODO: understand __subpackages__ visibility
    visibility = ["//:__subpackages__"],
    deps = [
        ":web",
        "@pypi//fastapi",
        "@pypi//uvicorn",
    ],
)

py_library(
    name = "web",
    srcs = [
        "add.py",
        "app.py",
        "cmd.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//fastapi",
        "@pypi//uvicorn",
    ],
)

py_test(
    name = "app_test",
    srcs = ["app_test.py"],
    # TODO: understand pytest_main
    # TODO: how to make gazelle to generate pytest_main?
    pytest_main = True,  # keep
    # TODO: how to make gazelle to add pytest automatically?
    # TODO: what's the proper way to add labels for third-party dependencies?
    deps = [
        ":web",
        "@pypi//pytest",
    ],  # keep
)

py_binary(
    name = "cmd",
    srcs = ["cmd.py"],
    data = ["files/data.txt"],
    visibility = ["//:__subpackages__"],
)
